# emserver

./: .gitignore  CMakeLists.txt  Makefile  Notes.txt  README.md  area.cpp  area.h  clienthandler.cpp  clienthandler.h  configparser.cpp  configparser.h  empacket.h  emscript.cpp  emscript.h  emserver.cpp  emserver.h  exparse.cpp  exparse.h  hello.cpp  lockableobject.h  main.cpp  mudobject.cpp  mudobject.h  player.cpp  player.h  room.cpp  room.h  scriptcmd.h  smallbasic.cpp  smallbasic.h  stringtokenizer.cpp  variable.h  world.cpp  world.h
scripts/: areas.ini  commands.ini  extrawords.ini  objects.ini
scripts/character/: player.b
scripts/objects/: bats.b  candle.b  coffin.b  food.b  host.b  key.b  makerooms  object0000.b  object0001.b  object0002.b  object0003.b  object0004.b  object0005.b  object0006.b  object0007.b  object0008.b  object0009.b  object0010.b  object0011.b  object0012.b  object0013.b  object0014.b  object0015.b  object0016.b  object0017.b  object0018.b  object0019.b  objectdefault.b  vampire.b  wall.b
scripts/rooms/: room0.b  room0007.b  room0008.b  room0009.b  room0010.b  room0011.b  room0012.b  room1.b  room10.b  room1001.b  room1002.b  room1003.b  room1004.b  room1005.b  room1006.b  room11.b  room12.b  room13.b  room14.b  room15.b  room16.b  room17.b  room18.b  room19.b  room2.b  room20.b  room21.b  room22.b  room23.b  room24.b  room25.b  room26.b  room27.b  room28.b  room29.b  room3.b  room30.b  room32.b  room33.b  room34.b  (+36 more)
users/: lee.b
